refactor: massive project-wide cleanup, implement DTOs, constructor injection, and performance optimizations