@@ -1,26 +1,18 @@
 package com.homie.finance.service;
 
-import com.homie.finance.dto.BulkTransactionRequest;
-import com.homie.finance.dto.DebtResponse;
-import com.homie.finance.dto.GroupStatsResponse;
-import com.homie.finance.dto.PageResponse;
-import com.homie.finance.dto.StatisticResponse;
-import com.homie.finance.dto.TransactionRequest;
-import com.homie.finance.dto.TransactionResponse;
-import com.homie.finance.entity.Category;
-import com.homie.finance.entity.Debt;
-import com.homie.finance.entity.GroupSpace;
-import com.homie.finance.entity.Transaction;
-import com.homie.finance.entity.User;
-import com.homie.finance.entity.Wallet;
-import com.homie.finance.repository.BudgetRepository;
-import com.homie.finance.repository.CategoryRepository;
-import com.homie.finance.repository.DebtRepository;
-import com.homie.finance.repository.GroupSpaceRepository;
-import com.homie.finance.repository.TransactionRepository;
-import com.homie.finance.repository.WalletRepository;
+import com.homie.finance.dto.transaction.BulkTransactionRequest;
+import com.homie.finance.dto.transaction.DebtResponse;
+import com.homie.finance.dto.group.GroupStatsResponse;
+import com.homie.finance.dto.format.PageResponse;
+import com.homie.finance.dto.statistic.StatisticResponse;
+import com.homie.finance.dto.transaction.CashFlowResponse;
+import com.homie.finance.dto.transaction.TransactionRequest;
+import com.homie.finance.dto.transaction.TransactionResponse;
+import com.homie.finance.entity.*;
+import com.homie.finance.repository.*;
 import com.homie.finance.security.SecurityUtils;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -38,40 +30,40 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class TransactionService {
 
-    @Autowired
-    private TransactionRepository transactionRepository;
-    @Autowired
-    private CategoryRepository categoryRepository;
-    @Autowired
-    private CloudinaryService cloudinaryService;
-    @Autowired
-    private BudgetRepository budgetRepository;
-    @Autowired
-    private AlertService alertService;
-    @Autowired
-    private GroupSpaceRepository groupSpaceRepository;
-    @Autowired
-    private WalletRepository walletRepository;
-    @Autowired
-    private DebtRepository debtRepository;
-    @Autowired
-    private NotificationService notificationService;
-    @Autowired
-    private LogService logService;
-    @Autowired
-    private SecurityUtils securityUtils;
+    private final TransactionRepository transactionRepository;
+    private final CategoryRepository categoryRepository;
+    private final CloudinaryService cloudinaryService;
+    private final BudgetRepository budgetRepository;
+    private final AlertService alertService;
+    private final GroupSpaceRepository groupSpaceRepository;
+    private final WalletRepository walletRepository;
+    private final DebtRepository debtRepository;
+    private final NotificationService notificationService;
+    private final LogService logService;
+    private final SecurityUtils securityUtils;
+
+    private void adjustWalletBalance(Wallet wallet, Category category, Double amount, String errorMessage) {
+        if ("EXPENSE".equals(category.getType())) {
+            if (wallet.getBalance() < amount) {
+                throw new IllegalArgumentException(errorMessage);
+            }
+            wallet.setBalance(wallet.getBalance() - amount);
+        } else {
+            wallet.setBalance(wallet.getBalance() + amount);
+        }
+        walletRepository.save(wallet);
+    }
 
     private GroupSpace requireGroupMembership(String groupId, User currentUser) {
         GroupSpace group = groupSpaceRepository.findByIdWithMembers(groupId)
                 .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy nhóm!"));
 
-        if (group.getMembers() == null
-                || group.getMembers().stream().noneMatch(member -> member.getId().equals(currentUser.getId()))) {
+        if (group.getMembers() == null || group.getMembers().stream().noneMatch(member -> member.getId().equals(currentUser.getId()))) {
             throw new IllegalArgumentException("Bạn không có quyền truy cập nhóm này!");
         }
-
         return group;
     }
 
@@ -83,23 +75,23 @@ public class TransactionService {
             request.setNote(item.getNote());
             request.setDate(bulkRequest.getDate());
             request.setReceiptUrl(bulkRequest.getReceiptUrl());
+            request.setWalletId(bulkRequest.getWalletId());
+            request.setCategoryId(item.getCategoryId());
+            request.setGroupSpaceId(bulkRequest.getGroupId());
 
-            return createTransaction(bulkRequest.getWalletId(), item.getCategoryId(), bulkRequest.getGroupId(),
-                    request);
+            return createTransaction(request);
         }).collect(Collectors.toList());
     }
 
     @Transactional
-    @org.springframework.cache.annotation.CacheEvict(value = "wallets", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
-    public TransactionResponse createTransaction(String walletId, String categoryId, String groupId,
-            TransactionRequest request) {
+    @CacheEvict(value = "wallets", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
+    public TransactionResponse createTransaction(TransactionRequest request) {
         User currentUser = securityUtils.getCurrentUser();
 
+        String categoryId = request.getCategoryId();
         if (categoryId == null || categoryId.isEmpty()) {
-            String suggestedId = suggestCategoryId(request.getNote());
-            if (suggestedId != null) {
-                categoryId = suggestedId;
-            } else {
+            categoryId = suggestCategoryId(request.getNote());
+            if (categoryId == null) {
                 throw new IllegalArgumentException("Vui lòng chọn danh mục cho giao dịch này!");
             }
         }
@@ -107,22 +99,14 @@ public class TransactionService {
         Category category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy danh mục!"));
 
-        Wallet wallet = walletRepository.findById(walletId)
+        Wallet wallet = walletRepository.findById(request.getWalletId())
                 .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy ví!"));
 
         if (!wallet.getUser().getId().equals(currentUser.getId())) {
             throw new IllegalArgumentException("Ví này không thuộc về bạn!");
         }
 
-        if ("EXPENSE".equals(category.getType())) {
-            if (wallet.getBalance() < request.getAmount()) {
-                throw new IllegalArgumentException("Số dư không đủ để thực hiện giao dịch này!");
-            }
-            wallet.setBalance(wallet.getBalance() - request.getAmount());
-        } else {
-            wallet.setBalance(wallet.getBalance() + request.getAmount());
-        }
-        walletRepository.save(wallet);
+        adjustWalletBalance(wallet, category, request.getAmount(), "Số dư không đủ để thực hiện giao dịch này!");
 
         Transaction transaction = new Transaction();
         transaction.setAmount(request.getAmount());
@@ -131,19 +115,16 @@ public class TransactionService {
         transaction.setCategory(category);
         transaction.setWallet(wallet);
         transaction.setUser(currentUser);
-        transaction.setDeleted(false);
         transaction.setReceiptUrl(request.getReceiptUrl());
-        transaction.setType(category.getType());
 
-        if (groupId != null && !groupId.isEmpty()) {
-            transaction.setGroupSpace(requireGroupMembership(groupId, currentUser));
+        if (request.getGroupSpaceId() != null && !request.getGroupSpaceId().isEmpty()) {
+            transaction.setGroupSpace(requireGroupMembership(request.getGroupSpaceId(), currentUser));
         }
 
         Transaction savedTx = transactionRepository.save(transaction);
 
         logService.saveLog(savedTx.getId(), currentUser.getUsername(), "CREATE",
-                String.format("Tạo mới: %.0fd [%s] - Danh mục: %s",
-                        savedTx.getAmount(), savedTx.getNote(), category.getName()));
+                String.format("Tạo mới: %.0fđ [%s] - Danh mục: %s", savedTx.getAmount(), savedTx.getNote(), category.getName()));
 
         if (wallet.getBalance() < 100000) {
             notificationService.createNotification(currentUser, "Ví '" + wallet.getName() + "' sắp cạn tiền rồi!");
@@ -151,7 +132,6 @@ public class TransactionService {
 
         if ("EXPENSE".equals(category.getType())) {
             checkBudgetAndAlert(currentUser, category, request);
-
             if (savedTx.getGroupSpace() != null) {
                 processSplit(savedTx, savedTx.getGroupSpace());
             }
@@ -162,9 +142,7 @@ public class TransactionService {
 
     private void processSplit(Transaction transaction, GroupSpace group) {
         Set<User> members = group.getMembers();
-        if (members.size() <= 1) {
-            return;
-        }
+        if (members.size() <= 1) return;
 
         double shareAmount = Math.floor(transaction.getAmount() / members.size());
 
@@ -180,20 +158,20 @@ public class TransactionService {
                 debtRepository.save(debt);
 
                 String msg = "Bạn có khoản nợ mới: " + String.format("%.0f", shareAmount)
-                        + "d từ " + transaction.getUser().getUsername() + " cho \"" + transaction.getNote() + "\"";
+                        + "đ từ " + transaction.getUser().getUsername() + " cho \"" + transaction.getNote() + "\"";
                 notificationService.createNotification(member, msg);
             }
         }
     }
 
     @Transactional
-    @org.springframework.cache.annotation.CacheEvict(value = "wallets", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
-    public TransactionResponse updateTransaction(String id, String newWalletId, String newCategoryId,
-            TransactionRequest request) {
+    @CacheEvict(value = "wallets", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
+    public TransactionResponse updateTransaction(String id, TransactionRequest request) {
         User currentUser = securityUtils.getCurrentUser();
-        Transaction oldTx = transactionRepository.findById(id).orElseThrow();
+        Transaction oldTx = transactionRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Không tìm thấy giao dịch!"));
         securityUtils.validateTransactionOwner(oldTx, currentUser);
 
+        // Hoàn tiền lại cho ví cũ
         Wallet oldWallet = oldTx.getWallet();
         if ("EXPENSE".equals(oldTx.getCategory().getType())) {
             oldWallet.setBalance(oldWallet.getBalance() + oldTx.getAmount());
@@ -202,23 +180,15 @@ public class TransactionService {
         }
         walletRepository.save(oldWallet);
 
-        Wallet newWallet = walletRepository.findById(newWalletId).orElseThrow();
-        Category newCategory = categoryRepository.findById(newCategoryId).orElseThrow();
+        Wallet newWallet = walletRepository.findById(request.getWalletId()).orElseThrow(() -> new IllegalArgumentException("Không tìm thấy ví mới!"));
+        Category newCategory = categoryRepository.findById(request.getCategoryId()).orElseThrow(() -> new IllegalArgumentException("Không tìm thấy danh mục mới!"));
 
         if (!newWallet.getUser().getId().equals(currentUser.getId())) {
             throw new IllegalArgumentException("Ví mới không thuộc về bạn!");
         }
 
-        if ("EXPENSE".equals(newCategory.getType()) && newWallet.getBalance() < request.getAmount()) {
-            throw new IllegalArgumentException("Ví mới không đủ số dư để thực hiện thay đổi này!");
-        }
-
-        if ("EXPENSE".equals(newCategory.getType())) {
-            newWallet.setBalance(newWallet.getBalance() - request.getAmount());
-        } else {
-            newWallet.setBalance(newWallet.getBalance() + request.getAmount());
-        }
-        walletRepository.save(newWallet);
+        // 🔥 Gọi hàm Helper cho ví mới
+        adjustWalletBalance(newWallet, newCategory, request.getAmount(), "Ví mới không đủ số dư để thực hiện thay đổi này!");
 
         String logDetail = String.format("Sửa: %.0f -> %.0f | Ghi chú: '%s' -> '%s'",
                 oldTx.getAmount(), request.getAmount(), oldTx.getNote(), request.getNote());
@@ -246,15 +216,11 @@ public class TransactionService {
     }
 
     @Transactional
-    @org.springframework.cache.annotation.CacheEvict(value = "wallets", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
+    @CacheEvict(value = "wallets", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
     public void deleteTransaction(String id) {
         User currentUser = securityUtils.getCurrentUser();
         Transaction transaction = transactionRepository.findById(id).orElseThrow();
         securityUtils.validateTransactionOwner(transaction, currentUser);
-
-        if (transaction.isDeleted()) {
-            throw new IllegalArgumentException("Giao dịch này đã ở trong thùng rác rồi!");
-        }
 
         Wallet wallet = transaction.getWallet();
         Category category = transaction.getCategory();
@@ -279,22 +245,16 @@ public class TransactionService {
 
     public List<TransactionResponse> getTrash() {
         User currentUser = securityUtils.getCurrentUser();
-        return transactionRepository.findByUserAndIsDeletedTrue(currentUser)
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return transactionRepository.findTrashByUser(currentUser)
+                .stream().map(this::mapToDto).collect(Collectors.toList());
     }
 
     @Transactional
-    @org.springframework.cache.annotation.CacheEvict(value = "wallets", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
+    @CacheEvict(value = "wallets", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
     public TransactionResponse restoreTransaction(String id) {
         User currentUser = securityUtils.getCurrentUser();
-        Transaction transaction = transactionRepository.findById(id).orElseThrow();
+        Transaction transaction = transactionRepository.findByIdIncludingTrash(id).orElseThrow();
         securityUtils.validateTransactionOwner(transaction, currentUser);
-
-        if (!transaction.isDeleted()) {
-            throw new IllegalArgumentException("Giao dịch không nằm trong thùng rác!");
-        }
 
         Wallet wallet = transaction.getWallet();
         Category category = transaction.getCategory();
@@ -309,8 +269,7 @@ public class TransactionService {
 
         transaction.setDeleted(false);
         transaction.setDeletedAt(null);
-        logService.saveLog(transaction.getId(), currentUser.getUsername(), "RESTORE",
-                "Khôi phục giao dịch từ thùng rác");
+        logService.saveLog(transaction.getId(), currentUser.getUsername(), "RESTORE", "Khôi phục giao dịch từ thùng rác");
         Transaction restoredTx = transactionRepository.save(transaction);
 
         if (restoredTx.getGroupSpace() != null) {
@@ -323,12 +282,8 @@ public class TransactionService {
     @Transactional
     public void forceDeleteTransaction(String id) {
         User currentUser = securityUtils.getCurrentUser();
-        Transaction transaction = transactionRepository.findById(id).orElseThrow();
+        Transaction transaction = transactionRepository.findByIdIncludingTrash(id).orElseThrow();
         securityUtils.validateTransactionOwner(transaction, currentUser);
-
-        if (!transaction.isDeleted()) {
-            throw new IllegalArgumentException("Chỉ được xóa vĩnh viễn giao dịch đang ở trong thùng rác!");
-        }
 
         List<Debt> existingDebts = debtRepository.findByTransaction(transaction);
         debtRepository.deleteAll(existingDebts);
@@ -340,25 +295,21 @@ public class TransactionService {
         User currentUser = securityUtils.getCurrentUser();
         requireGroupMembership(groupId, currentUser);
 
-        List<Transaction> transactions = transactionRepository.findAllByGroupSpaceIdAndIsDeletedFalse(groupId).stream()
-                .filter(t -> t.getDate() != null && t.getDate().getMonthValue() == month
-                        && t.getDate().getYear() == year)
-                .collect(Collectors.toList());
+        List<Transaction> transactions = transactionRepository.findAllByGroupSpaceId(groupId).stream()
+                .filter(t -> t.getDate() != null && t.getDate().getMonthValue() == month && t.getDate().getYear() == year)
+                .toList();
 
         Double totalExpense = transactions.stream()
                 .filter(t -> t.getCategory() != null && "EXPENSE".equals(t.getCategory().getType()))
-                .mapToDouble(Transaction::getAmount)
-                .sum();
+                .mapToDouble(Transaction::getAmount).sum();
 
         Map<String, Double> byCategory = transactions.stream()
                 .filter(t -> t.getCategory() != null && "EXPENSE".equals(t.getCategory().getType()))
-                .collect(Collectors.groupingBy(t -> t.getCategory().getName(),
-                        Collectors.summingDouble(Transaction::getAmount)));
+                .collect(Collectors.groupingBy(t -> t.getCategory().getName(), Collectors.summingDouble(Transaction::getAmount)));
 
         Map<String, Double> byUser = transactions.stream()
                 .filter(t -> t.getUser() != null)
-                .collect(Collectors.groupingBy(t -> t.getUser().getUsername(),
-                        Collectors.summingDouble(Transaction::getAmount)));
+                .collect(Collectors.groupingBy(t -> t.getUser().getUsername(), Collectors.summingDouble(Transaction::getAmount)));
 
         return new GroupStatsResponse(totalExpense, byCategory, byUser);
     }
@@ -366,14 +317,13 @@ public class TransactionService {
     public PageResponse<TransactionResponse> getAllTransactions(int page, int size) {
         User currentUser = securityUtils.getCurrentUser();
         Pageable pageable = PageRequest.of(page, size, Sort.by("date").descending());
-        return mapToPageResponse(transactionRepository.findByUserAndIsDeletedFalse(currentUser, pageable));
+        return mapToPageResponse(transactionRepository.findByUser(currentUser, pageable));
     }
 
     public PageResponse<TransactionResponse> searchTransactions(String keyword, int page, int size) {
         User currentUser = securityUtils.getCurrentUser();
         Pageable pageable = PageRequest.of(page, size, Sort.by("date").descending());
-        return mapToPageResponse(transactionRepository
-                .findByUserAndNoteContainingIgnoreCaseAndIsDeletedFalse(currentUser, keyword, pageable));
+        return mapToPageResponse(transactionRepository.findByUserAndNoteContainingIgnoreCase(currentUser, keyword, pageable));
     }
 
     public TransactionResponse uploadReceipt(String transactionId, MultipartFile file) {
@@ -381,9 +331,8 @@ public class TransactionService {
         Transaction transaction = transactionRepository.findById(transactionId).orElseThrow();
         securityUtils.validateTransactionOwner(transaction, currentUser);
 
-        if (file.getSize() > 5 * 1024 * 1024) {
-            throw new IllegalArgumentException("File qua nang!");
-        }
+        if (file.getSize() > 5 * 1024 * 1024) throw new IllegalArgumentException("File quá nặng! (Tối đa 5MB)");
+
         if (transaction.getReceiptUrl() != null) {
             cloudinaryService.deleteImage(transaction.getReceiptUrl());
         }
@@ -394,11 +343,8 @@ public class TransactionService {
     }
 
     public List<TransactionResponse> getAllTransactionsForExport() {
-        return transactionRepository.findByUserAndIsDeletedFalse(securityUtils.getCurrentUser(), Pageable.unpaged())
-                .getContent()
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return transactionRepository.findByUser(securityUtils.getCurrentUser(), Pageable.unpaged())
+                .getContent().stream().map(this::mapToDto).collect(Collectors.toList());
     }
 
     public Double getTotalByType(String type) {
@@ -407,10 +353,8 @@ public class TransactionService {
     }
 
     public List<TransactionResponse> getTransactionsByType(String type) {
-        return transactionRepository.findByUserAndCategoryTypeAndIsDeletedFalse(securityUtils.getCurrentUser(), type)
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return transactionRepository.findByUserAndCategoryType(securityUtils.getCurrentUser(), type)
+                .stream().map(this::mapToDto).collect(Collectors.toList());
     }
 
     public List<StatisticResponse> getCategoryStatistics(LocalDate startDate, LocalDate endDate) {
@@ -423,7 +367,7 @@ public class TransactionService {
         return transactionRepository.getCategoryStatistics(currentUser, startDate, endDate);
     }
 
-    public List<com.homie.finance.dto.CashFlowResponse> getCashFlowStatistics(LocalDate startDate, LocalDate endDate) {
+    public List<CashFlowResponse> getCashFlowStatistics(LocalDate startDate, LocalDate endDate) {
         User currentUser = securityUtils.getCurrentUser();
         if (startDate == null || endDate == null) {
             YearMonth currentMonth = YearMonth.now();
@@ -442,17 +386,12 @@ public class TransactionService {
                     Double limit = budget.getLimitAmount();
                     LocalDate startDate = YearMonth.of(year, month).atDay(1);
                     LocalDate endDate = YearMonth.of(year, month).atEndOfMonth();
-                    Double spent = transactionRepository.sumAmountByUserAndCategoryAndDateBetween(currentUser, category,
-                            startDate, endDate);
-                    if (spent == null) {
-                        spent = 0.0;
-                    }
+                    Double spent = transactionRepository.sumAmountByUserAndCategoryAndDateBetween(currentUser, category, startDate, endDate);
+                    if (spent == null) spent = 0.0;
 
                     if (spent + request.getAmount() > limit) {
-                        alertService.sendBudgetAlertEmail(currentUser.getEmail(), currentUser.getUsername(),
-                                category.getName(), limit);
-                        String msg = "Cảnh báo: Bạn đã chi tiêu vượt định mức của danh mục " + category.getName()
-                                + " (Hạn mức: " + String.format("%.0f", limit) + "d)";
+                        alertService.sendBudgetAlertEmail(currentUser.getEmail(), currentUser.getUsername(), category.getName(), limit);
+                        String msg = "Cảnh báo: Bạn đã chi tiêu vượt định mức của danh mục " + category.getName() + " (Hạn mức: " + String.format("%.0f", limit) + "đ)";
                         notificationService.createNotification(currentUser, msg);
                     }
                 });
@@ -462,7 +401,7 @@ public class TransactionService {
         User currentUser = securityUtils.getCurrentUser();
         requireGroupMembership(groupId, currentUser);
         Pageable pageable = PageRequest.of(page, size, Sort.by("date").descending());
-        return mapToPageResponse(transactionRepository.findByGroupSpaceIdAndIsDeletedFalse(groupId, pageable));
+        return mapToPageResponse(transactionRepository.findByGroupSpaceId(groupId, pageable));
     }
 
     @Transactional
@@ -478,7 +417,7 @@ public class TransactionService {
         debt.setSettled(true);
         debtRepository.save(debt);
 
-        String msg = currentUser.getUsername() + " đã xác nhận bạn trả xong khoản nợ " + debt.getAmount() + "d.";
+        String msg = currentUser.getUsername() + " đã xác nhận bạn trả xong khoản nợ " + String.format("%.0f", debt.getAmount()) + "đ.";
         notificationService.createNotification(debt.getDebtor(), msg);
     }
 
@@ -491,43 +430,37 @@ public class TransactionService {
             DebtResponse res = new DebtResponse();
             res.setId(debt.getId());
             res.setAmount(debt.getAmount());
-            if (debt.getCreditor() != null) {
-                res.setCreditorName(debt.getCreditor().getUsername());
-            }
-            if (debt.getDebtor() != null) {
-                res.setDebtorName(debt.getDebtor().getUsername());
-            }
+            if (debt.getCreditor() != null) res.setCreditorName(debt.getCreditor().getUsername());
+            if (debt.getDebtor() != null) res.setDebtorName(debt.getDebtor().getUsername());
             res.setSettled(debt.isSettled());
             return res;
         }).collect(Collectors.toList());
     }
 
     private TransactionResponse mapToDto(Transaction transaction) {
-        TransactionResponse res = new TransactionResponse();
-        res.setId(transaction.getId());
-        res.setAmount(transaction.getAmount());
-        res.setNote(transaction.getNote());
-        res.setDate(transaction.getDate());
-        res.setReceiptUrl(transaction.getReceiptUrl());
+        TransactionResponse res = TransactionResponse.builder()
+                .id(transaction.getId())
+                .amount(transaction.getAmount())
+                .note(transaction.getNote())
+                .date(transaction.getDate())
+                .receiptUrl(transaction.getReceiptUrl())
+                .build();
 
         if (transaction.getCategory() != null) {
             res.setCategoryName(transaction.getCategory().getName());
-            res.setCategoryType(transaction.getCategory().getType());
+            res.setType(transaction.getCategory().getType());
         }
         if (transaction.getWallet() != null) {
             res.setWalletName(transaction.getWallet().getName());
         }
-
         if (transaction.getGroupSpace() != null) {
-            res.setGroupName(transaction.getGroupSpace().getName());
             res.setGroupId(transaction.getGroupSpace().getId());
+            res.setGroupName(transaction.getGroupSpace().getName());
         }
-
         if (transaction.getUser() != null) {
             res.setUserId(transaction.getUser().getId());
             res.setUserName(transaction.getUser().getUsername());
         }
-
         return res;
     }
 
@@ -537,17 +470,11 @@ public class TransactionService {
     }
 
     public String suggestCategoryId(String note) {
-        if (note == null || note.length() < 2) {
-            return null;
-        }
+        if (note == null || note.length() < 2) return null;
         User currentUser = securityUtils.getCurrentUser();
 
-        List<Category> suggestions = transactionRepository.findSuggestedCategory(
-                currentUser, note, PageRequest.of(0, 1));
-
-        if (!suggestions.isEmpty()) {
-            return suggestions.get(0).getId();
-        }
+        List<Category> suggestions = transactionRepository.findSuggestedCategory(currentUser, note, PageRequest.of(0, 1));
+        if (!suggestions.isEmpty()) return suggestions.get(0).getId();
 
         Map<String, String> commonMap = Map.of(
                 "starbucks", "An uong",
@@ -558,35 +485,24 @@ public class TransactionService {
                 "netflix", "Giai tri");
 
         String lowerNote = note.toLowerCase().trim();
-
         for (Map.Entry<String, String> entry : commonMap.entrySet()) {
             if (lowerNote.contains(entry.getKey())) {
                 return categoryRepository.findByNameIgnoreCase(entry.getValue().trim())
-                        .map(Category::getId)
-                        .orElse(null);
+                        .map(Category::getId).orElse(null);
             }
         }
         return null;
     }
 
     @Transactional
-    public TransactionResponse createSystemTransaction(String walletId, String categoryId, User user,
-            TransactionRequest request) {
-        Category category = categoryRepository.findById(categoryId)
+    public TransactionResponse createSystemTransaction(TransactionRequest request, User user) {
+        Category category = categoryRepository.findById(request.getCategoryId())
                 .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy danh mục!"));
 
-        Wallet wallet = walletRepository.findById(walletId)
+        Wallet wallet = walletRepository.findById(request.getWalletId())
                 .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy ví!"));
 
-        if ("EXPENSE".equals(category.getType())) {
-            if (wallet.getBalance() < request.getAmount()) {
-                throw new IllegalArgumentException("Số dư không đủ để thực hiện giao dịch định kỳ!");
-            }
-            wallet.setBalance(wallet.getBalance() - request.getAmount());
-        } else {
-            wallet.setBalance(wallet.getBalance() + request.getAmount());
-        }
-        walletRepository.save(wallet);
+        adjustWalletBalance(wallet, category, request.getAmount(), "Số dư không đủ để thực hiện giao dịch định kỳ!");
 
         Transaction transaction = new Transaction();
         transaction.setAmount(request.getAmount());
@@ -595,19 +511,15 @@ public class TransactionService {
         transaction.setCategory(category);
         transaction.setWallet(wallet);
         transaction.setUser(user);
-        transaction.setDeleted(false);
         transaction.setReceiptUrl(request.getReceiptUrl());
-        transaction.setType(category.getType());
 
         Transaction savedTx = transactionRepository.save(transaction);
 
         logService.saveLog(savedTx.getId(), "HE THONG", "CREATE_AUTO",
-                String.format("Hệ thống tự động tạo: %.0fd [%s] - Danh mục: %s",
-                        savedTx.getAmount(), savedTx.getNote(), category.getName()));
+                String.format("Hệ thống tự động tạo: %.0fđ [%s] - Danh mục: %s", savedTx.getAmount(), savedTx.getNote(), category.getName()));
 
         if (wallet.getBalance() < 100000) {
-            notificationService.createNotification(user,
-                    "Cảnh báo: Ví '" + wallet.getName() + "' sắp cạn tiền sau khi trừ phí định kỳ!");
+            notificationService.createNotification(user, "Cảnh báo: Ví '" + wallet.getName() + "' sắp cạn tiền sau khi trừ phí định kỳ!");
         }
 
         if ("EXPENSE".equals(category.getType())) {
